2014-02-28  Roland Winkler  <winkler@gnu.org>
	Do not use `prompt' in a non-emacs sense.
	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
	when compiling.
	(bbdb-auto-revert, bbdb-silent, bbdb-default-domain)
	(bbdb-default-area-code, bbdb-offer-to-create)
	(bbdb-update-records-address): Fix docstring.

	* lisp/bbdb-com.el (bbdb-search-read): Renamed from
	bbdb-search-prompt.
	(bbdb, bbdb-search-name, bbdb-search-organization)
	(bbdb-search-address, bbdb-search-mail, bbdb-search-phone)
	(bbdb-search-xfields): Change accordingly.
	(bbdb-read-record, bbdb-create, bbdb-completing-read-records): Fix
	docstring.
	(bbdb-read-field): Renamed from bbdb-prompt-for-new-field.  Use
	arg flag instead of current-prefix-arg.  Add docstring.
	(bbdb-insert-field): Change accordingly. Fix docstring.
	(bbdb-edit-foo): Change accordingly.

	* lisp/bbdb-mua.el (bbdb-query-create): Renamed from
	bbdb-prompt-for-create.
	(bbdb-update-records)
	* lisp/bbdb.el (bbdb-insert-field-menu): Change accordingly.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
	when compiling.
	(bbdb-address-format-list, bbdb-buffer, bbdb-revert-buffer)
	* lisp/bbdb-com.el (bbdb-complete-mail): Fix docstring.

2014-02-17  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): If value of arg update-p
	is a function, evaluate it repeatedly as many times as needed.

2014-02-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Bug fix for previous
	commit.  Allow value of update-p being create, too.

2014-02-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Always evaluate arg
	update-p twice if its value is a function.

2014-01-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-puthash, bbdb-record-set-xfield)
	(bbdb-record-set-field, bbdb-parse-records, bbdb-change-record):
	Bugfix, make 'eq the 4th arg of add-to-list.
