@@ -1,4 +1,11 @@
 2014-02-28  Roland Winkler  <winkler@gnu.org>
+	* configure.ac: Increase BBDB version number to 3.1.
+	* README: Update accordingly.  Fix typos.
+	* Makefile.am: Include autogen.sh in distribution.
+	* lisp/Makefile.am: Include lisp/bbdb-pkg.el in distribution.
+	* lisp/makefile-temp: Include lisp/bbdb-pkg.el.
+
+2014-02-28  Roland Winkler  <winkler@gnu.org>
 	Do not use `prompt' in a non-emacs sense.
 	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
 	when compiling.
